--- a/Project.csproj
+++ b/Project.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="OpenTelemetry" Version="1.7.0" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.7.0" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.2.0" />
     <PackageReference Include="SharpToken" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
